@@ -1,5 +1,12 @@
 2008-08-07  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/hildon-button.c (hildon_button_init)
+	(hildon_button_set_arrangement, hildon_button_construct_child):
+	Pack the image and the labels inside the same GtkAlignment so
+	gtk_button_set_alignment() can be used
+
+2008-08-07  Alberto Garcia  <agarcia@igalia.com>
+
 	* src/hildon-button.h
 	* src/hildon-button.c
 	(hildon_button_init, hildon_button_set_image)
